src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>XO Account Management</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Product Introduction</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>XO Sales</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracting</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Product Introduction</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Parent__c</fullName>
        <formula>Account.Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Parent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brokerage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Broker Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Broker</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Broker)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calculated_PEPM__c</fullName>
        <label>Calculated PEPM</label>
        <summarizedField>OpportunityLineItem.PEPM__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Source 1</fullName>
                </value>
                <value>
                    <fullName>Source 2</fullName>
                </value>
                <value>
                    <fullName>Source 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Team__c</fullName>
        <label>Care Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Campaign@Spring</fullName>
                </value>
                <value>
                    <fullName>Campaign@BayArea</fullName>
                </value>
                <value>
                    <fullName>XO@NYC</fullName>
                    <label>Campaign@NYC</label>
                </value>
                <value>
                    <fullName>XO@Seattle</fullName>
                    <label>Campaign@Seattle</label>
                </value>
                <value>
                    <fullName>XO@Austin</fullName>
                    <label>Campaign@Austin</label>
                </value>
                <value>
                    <fullName>XO@Denver</fullName>
                    <label>Campaign@Denver</label>
                </value>
                <value>
                    <fullName>XO@Newark</fullName>
                    <label>Campaign@Newark</label>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>XO@BayArea_NS</fullName>
                </value>
                <value>
                    <fullName>XO@TX_NS</fullName>
                </value>
                <value>
                    <fullName>XO@Midtown_NS</fullName>
                </value>
                <value>
                    <fullName>XO@Virtual</fullName>
                </value>
                <value>
                    <fullName>Client@Location</fullName>
                </value>
                <value>
                    <fullName>AMAT@Austin</fullName>
                </value>
                <value>
                    <fullName>AMAT@Gloucester</fullName>
                </value>
                <value>
                    <fullName>AMAT@SantaClara</fullName>
                </value>
                <value>
                    <fullName>Amazon@Dallas</fullName>
                </value>
                <value>
                    <fullName>Amazon@Detroit</fullName>
                </value>
                <value>
                    <fullName>Amazon@Louisville</fullName>
                </value>
                <value>
                    <fullName>Amazon@Phoenix</fullName>
                </value>
                <value>
                    <fullName>Amazon@SanBernardino</fullName>
                </value>
                <value>
                    <fullName>Apple@AustinCR</fullName>
                </value>
                <value>
                    <fullName>Apple@AustinPL</fullName>
                </value>
                <value>
                    <fullName>Apple@Cork</fullName>
                </value>
                <value>
                    <fullName>Apple@Park</fullName>
                </value>
                <value>
                    <fullName>Apple@Sacramento</fullName>
                </value>
                <value>
                    <fullName>Apple@Singapore</fullName>
                </value>
                <value>
                    <fullName>Comcast@30Rock</fullName>
                </value>
                <value>
                    <fullName>Comcast@Mobile</fullName>
                </value>
                <value>
                    <fullName>Comcast@Philadelphia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic_Launch_Date__c</fullName>
        <inlineHelpText>The day you anticipate the product going live and thereby getting revenue</inlineHelpText>
        <label>Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Close_the_Order_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Close the Order stage</inlineHelpText>
        <label>Close the Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Closed Lost stage</inlineHelpText>
        <label>Closed Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost__c</fullName>
        <formula>IF(
    ISPICKVAL(StageName,&apos;Closed Lost&apos;), TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in reporting to measure lost ratios.</inlineHelpText>
        <label>Closed Lost</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Closed Won stage</inlineHelpText>
        <label>Closed Won Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Committed_Lives__c</fullName>
        <inlineHelpText>Total number of Committed Lives from all associated Accounts.
Committed Lives = Account is 100% Committed.</inlineHelpText>
        <label>Committed Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Committed_Monthly_Value__c</fullName>
        <formula>Committed_Lives__c * 46</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Committed Monthly Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_years__c</fullName>
        <label>Contract years</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cover_the_Bases_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Cover the Bases stage</inlineHelpText>
        <label>Cover the Bases Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Year_Prorated_Revenue__c</fullName>
        <formula>(13 - MONTH(Clinic_Launch_Date__c )) * (Amount/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Potential Revenue this year. 
# of Months Remaining / 12 * Probability</inlineHelpText>
        <label>Current Year Prorated Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Days_in_Close_the_Order__c</fullName>
        <inlineHelpText>Number of days the opportunity is in Stage of &quot;Close the Order&quot;</inlineHelpText>
        <label>Days in Close the Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Cover_the_Bases__c</fullName>
        <inlineHelpText>Number of days the opportunity is in Stage of &quot;Cover the Bases&quot;</inlineHelpText>
        <label>Days in Cover the Bases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Decision__c</fullName>
        <inlineHelpText>Number of days the opportunity is in Stage of &quot;Decision&quot;</inlineHelpText>
        <label>Days in Decision</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Lead__c</fullName>
        <inlineHelpText>Number of days the opportunity is in Stage of &quot;Lead&quot;</inlineHelpText>
        <label>Days in Lead</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Prospect__c</fullName>
        <inlineHelpText>Number of days the opportunity is in Stage of &quot;Prospect&quot;</inlineHelpText>
        <label>Days in Prospect</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Decision stage</inlineHelpText>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this field to mark this field for deletion.</inlineHelpText>
        <label>Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dependents__c</fullName>
        <label>Dependents eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_client_tour_a_XO_facility__c</fullName>
        <inlineHelpText>Indicate if the client toured a Crossover facility by picking Yes or No from the picklist.</inlineHelpText>
        <label>Did client tour a XO facility?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>YesNo</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External__c</fullName>
        <description>This is a spot for reference material such as proposals/decks via link</description>
        <inlineHelpText>Add the link to proposals or decks here.</inlineHelpText>
        <label>External Links</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Forecasted_Amount__c</fullName>
        <label>Forecasted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Future_Expansion__c</fullName>
        <label>Future Expansion</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>If_near_site_area__c</fullName>
        <label>If near-site, area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bay Area - Menlo Park</fullName>
                </value>
                <value>
                    <fullName>Bay Area - Palo Alto</fullName>
                </value>
                <value>
                    <fullName>Bay Area - Redwood City</fullName>
                </value>
                <value>
                    <fullName>Bay Area - San Francisco</fullName>
                </value>
                <value>
                    <fullName>Bay Area - San Francisco (South of Market)</fullName>
                </value>
                <value>
                    <fullName>Bay Area - Union City</fullName>
                </value>
                <value>
                    <fullName>237 - West 237</fullName>
                </value>
                <value>
                    <fullName>237 - Central 237</fullName>
                </value>
                <value>
                    <fullName>237 - East 237</fullName>
                </value>
                <value>
                    <fullName>237 - South 101</fullName>
                </value>
                <value>
                    <fullName>237 - MV</fullName>
                </value>
                <value>
                    <fullName>237- North SJ</fullName>
                </value>
                <value>
                    <fullName>237 - South Fremont</fullName>
                </value>
                <value>
                    <fullName>Pleasanton</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Orange County</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>New York</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>text(Account.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Lead stage</inlineHelpText>
        <label>Lead Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>Text(Account.State__c) &amp; &quot; | &quot; &amp; Text(Account.Region_Picklist__c) &amp; &quot; | &quot; &amp; Text(Account.Near_Site_Neighborhood__c)</formula>
        <inlineHelpText>New 2019 Location field. Value is brought from the account level instead of Opportunity Product level</inlineHelpText>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locations_in_Product__c</fullName>
        <description>We&apos;ll populate this field in the background with a declarative roll-up summary</description>
        <inlineHelpText>This field contains all locations from the Opportunity Product (product line item details) for this Opportunity. Use this field for searches on opportunities where you need to query opportunities containing a product at a specific location.</inlineHelpText>
        <label>Locations</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>If Lost, reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Project Cancelled</fullName>
                    <label>Client not moving forward with clinic solution</label>
                </value>
                <value>
                    <fullName>Project on Hold</fullName>
                    <label>Delayed by client</label>
                </value>
                <value>
                    <fullName>Kept incumbent - other</fullName>
                </value>
                <value>
                    <fullName>Finance Approval</fullName>
                    <label>Kept incumbent - price</label>
                </value>
                <value>
                    <fullName>Kept incumbent - services</fullName>
                </value>
                <value>
                    <fullName>New NonXO Vendor - other</fullName>
                </value>
                <value>
                    <fullName>Competitor - Other</fullName>
                    <label>New NonXO Vendor - price</label>
                </value>
                <value>
                    <fullName>Occupational Health</fullName>
                    <label>New NonXO Vendor - services</label>
                </value>
                <value>
                    <fullName>XO opted out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Momentum__c</fullName>
        <label>Momentum</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>+1</fullName>
                </value>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>-1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Near_Site_Location__c</fullName>
        <description>Just for Reporting - Not displayed on Page</description>
        <formula>text(State__c) &amp; &quot; | &quot; &amp;  text(Region__c)  &amp; &quot; | &quot; &amp;  text(Near_site_Neighborhood__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Near Site Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Near_site_Neighborhood__c</fullName>
        <label>Near-site Neighborhood</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>237 (Middle)</fullName>
                </value>
                <value>
                    <fullName>Arlington Heights</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin (Central / Downtown)</fullName>
                </value>
                <value>
                    <fullName>Austin (North)</fullName>
                </value>
                <value>
                    <fullName>Austin (South)</fullName>
                </value>
                <value>
                    <fullName>Austin (West)</fullName>
                </value>
                <value>
                    <fullName>Baltimore</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berryessa (880 East)</fullName>
                </value>
                <value>
                    <fullName>Bethesda</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Boulder</fullName>
                </value>
                <value>
                    <fullName>Broomfield</fullName>
                </value>
                <value>
                    <fullName>Bryant Park</fullName>
                </value>
                <value>
                    <fullName>Burbank</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Chandler</fullName>
                </value>
                <value>
                    <fullName>Chesapeake</fullName>
                </value>
                <value>
                    <fullName>Chicago (Downtown)</fullName>
                </value>
                <value>
                    <fullName>Columbus Circle</fullName>
                </value>
                <value>
                    <fullName>Culver City</fullName>
                </value>
                <value>
                    <fullName>Deerfield</fullName>
                </value>
                <value>
                    <fullName>Denver (Cherry Creek)</fullName>
                </value>
                <value>
                    <fullName>Denver (Highlands Ranch)</fullName>
                </value>
                <value>
                    <fullName>Denver Tech Center</fullName>
                </value>
                <value>
                    <fullName>Design District (SF)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Boston)</fullName>
                </value>
                <value>
                    <fullName>Downtown (Dallas)</fullName>
                </value>
                <value>
                    <fullName>Downtown (LA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Of_Employees__c</fullName>
        <inlineHelpText>Total number of potential employees at the company or for payers, the total number of potential subscribers beyond this opportunity.</inlineHelpText>
        <label>Total Number Of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Eligible_Employees__c</fullName>
        <description>This number represents the additional eligible employees from this opportunity.  This could be 0 if we are just adding an additional service at an onsite.</description>
        <inlineHelpText>The number of eligible employees for this opportunity</inlineHelpText>
        <label>Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nuture_4_Contact_Again__c</fullName>
        <label>Nuture 4 - Contact Again</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupational_Health__c</fullName>
        <label>Occupational Health</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID_Copy__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>This is a copy of the opportunity ID for testing purposes and is visible to the system administrator only</inlineHelpText>
        <label>Opportunity ID Copy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Plan / TPA</fullName>
                </value>
                <value>
                    <fullName>Employers</fullName>
                    <default>true</default>
                    <label>Employers</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Power of One field For reporting</description>
        <formula>1</formula>
        <label>Opportunity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_NS_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use this field to help you find the original near-site opportunity all accounts pointed to prior to the near-site architecture change to products.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Potential_Lives__c</fullName>
        <inlineHelpText>The potential lives at the company</inlineHelpText>
        <label>Potential Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pricing_Models__c</fullName>
        <inlineHelpText>This field contains the pricing models for all the products on this opportunity.</inlineHelpText>
        <label>Pricing Models</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prob_Year_1_Rev__c</fullName>
        <formula>Amount * Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Opportunity Amount * Probability</inlineHelpText>
        <label>Weighted Rev</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Families__c</fullName>
        <inlineHelpText>This field contains all unique product families on all products for this opportunity</inlineHelpText>
        <label>Product Families</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <inlineHelpText>This field contains all products from the Opportunity Product (product line item details) for this Opportunity. Use this field for searches on opportunities where you need to query opportunities containing a specific product.</inlineHelpText>
        <label>Products</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Date__c</fullName>
        <inlineHelpText>Date the opportunity was placed in the Prospect stage</inlineHelpText>
        <label>Prospect Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_RFP__c</fullName>
        <label>RFI/RFP Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Learning</fullName>
                    <default>true</default>
                    <label>Learning</label>
                </value>
                <value>
                    <fullName>Business Case</fullName>
                </value>
                <value>
                    <fullName>Request for Information</fullName>
                </value>
                <value>
                    <fullName>Request for Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Start_Date__c</fullName>
        <label>RFP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reason_for_Result_Perceived_and_actual__c</fullName>
        <inlineHelpText>Enter the perceived and/or actual reason for the result.</inlineHelpText>
        <label>Reason for Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Recommendations_for_Next_Steps__c</fullName>
        <inlineHelpText>Please describe your recommendations for next steps here.</inlineHelpText>
        <label>Recommendations for Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>State__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Bay Area</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Central CT</fullName>
                </value>
                <value>
                    <fullName>Central Florida</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Coastal CT</fullName>
                </value>
                <value>
                    <fullName>Conneticut</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>North Florida</fullName>
                </value>
                <value>
                    <fullName>North NJ</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>NYC</fullName>
                </value>
                <value>
                    <fullName>NY South</fullName>
                </value>
                <value>
                    <fullName>Philadelphia</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Raleigh</fullName>
                </value>
                <value>
                    <fullName>Richmond</fullName>
                </value>
                <value>
                    <fullName>San Antonio</fullName>
                </value>
                <value>
                    <fullName>Southern California</fullName>
                </value>
                <value>
                    <fullName>South Florida</fullName>
                </value>
                <value>
                    <fullName>Utah</fullName>
                </value>
                <value>
                    <fullName>Winston-Salem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <description>Is this brand new business revenue?  Under contract revenue?  Or contract renewal revenue?</description>
        <label>Revenue Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                    <default>true</default>
                    <label>New SOW</label>
                </value>
                <value>
                    <fullName>Under Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>